# air

./: .gitattributes  .taplo.toml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  SECURITY.md  cliff.toml  compose.yaml  deny.toml  justfile  rust-toolchain.toml
apiclient/: Cargo.toml  build.rs
apiclient/src/: as_api.rs  ds_api.rs  lib.rs  metadata.rs  qs_api.rs  rs_api.rs  util.rs
app/: .fvmrc  (+6 more)
applogic/: Cargo.toml  rust-toolchain.toml
applogic/migrations/: 20260325112913_pending-attachment-index.sql
applogic/src/: frb_generated.rs  lib.rs  mark_as_read.rs  message_content.rs  messages.rs  notifications.rs
apqmls/: Cargo.toml
apqmls/src/: commit_builder.rs  extension.rs  external_commit_builder.rs  group_builder.rs  key_package.rs  lib.rs  merging.rs  messages.rs  processing.rs  public_group.rs  welcome.rs
apqmls/tests/: basic.rs  external_commit.rs  group_builder.rs
backend/: .env  Cargo.toml  sqlx.toml
backend/.sqlx/: query-009ea5abea99ad1850db1b28719f98b41141257d5af4b30323f2ac8acdf9c8fd.json  query-0194202f1e08d10cc50aaa92568bb9bcbb219b722e4570198fd9b75d3adc9a85.json  query-01a4b67ee80f09491efc303e083f3d6ff5d3cd07d0cbd9bd9c578e32e94b07e7.json  query-01c163087b70ffa67d43a6b72bd9a75d99f95d7a74e2a1412e5cec0536062158.json  query-0432c5aecc038321b87cedfa53af0f9043a6a7604c621cb67103132abcde24bc.json  query-06b82206bebf9c7a5e83b30389eda324e846567672b129808cda163c5a3e2f80.json  query-0b64332496800e9bc457fbde8cd3fa80a0665f90649968686878438c90a70fc9.json  query-0c8d9f8d4da71cf79065a0c4634e22cfa21e41e676423178601eed83de17ae30.json  query-0e3a72fec890b2ec9da371ec1b1256ad373f231d5e77957ef2078048cf74e2a0.json  query-102ce8d7267c9f5fa19ecfe6532c69baa0416b47d94073dbab130b8c46ce341c.json  query-12e73dfab2f24c6d3204022520754563003236eccf2da727813507f7da2002e5.json  query-13e5b1dce5813b1e414bb09d02c021a96f25f6010373bb6efaf6a6e949292c91.json  query-149b995eac28272feaf2938ad394d6c3eca0569a7b3c4e6b96556a67cc711dd1.json  query-15becff3da9dcdad57c9ed9d5e90cec38de3bb056c8469ffd67de07cdd8fc5c9.json  query-15f6f8e134c2a9a857ad2c06e9438a1d7ac1a6c00538ed6d64adb6bcbb23e02c.json  query-165479a53d1a871352068439d9d7c9e351822b3ee2f89e06e36393d224d19a1f.json  query-17110dea176c96d7cb59eff749973162eaa969d9ffc9e018e66ec3489a26c1f1.json  query-1b20ab84fffce6b29ad35fc086aa462dbd2ed0671b7ebe672c981527c9902e3a.json  query-1c0dae598373359bae1bf6367820ece893838f3f1c618f87353ab197f2ce69b9.json  query-1cefa4f892748d7a2f29316f921be82afd58384220d1d74e5b4aafe060d572bb.json  query-1dc9bd1ab1d2c3c0318d851f6f78b60ba283777c94401e7d3fa02212b6356b3b.json  query-1f52ade12e1cd920fd90a3bcced57e55812767b665e085ac6fa57b1b8690a5a7.json  query-1fc575e719bf078b5310eb8131e7fa52a19192aed6817d7f949e0e35f867fc84.json  query-24d0c8f4b6d7088d79672a1f72b55aeae755c86477ceef298d0f89401a73c031.json  query-24f96787546b36a6c56403cd16b0995c8768652c816f247a23162ac169b229af.json  query-2955c64236fb65da84cb545e657a1c29d2df49db0ca7a00d6e13dad21836837f.json  query-29eeaec0c2bcf02e2d568f3726964b9afa1e6ce744c3f5c35794b4482eadbf90.json  query-2b45871c196d718f66df21cec6ddf92b65eb9ec1eda6ba7481694cb338ff01da.json  query-2d47629dd2551257ac8f3323b445cdea3f4ef786dfcc93b069cf7f5c6a7cb6c1.json  query-30d77622ecb3d65e84dfcfd1414cacc88892249a91f837c4de123d76a5d44d3d.json  query-3318ee21100e008ba9693215a35d7eeb0a2e9e925070ca2c521e27ae9e6bb378.json  query-337d4364751a705c8999e3971cc6599c6622c9f160829ceebc4b8d435bbcc060.json  query-33f98fa6c2308334f11c8b5c7f17012052b331e9c2429d4a8a438a34c31f218c.json  query-34fdd04a1f415b44533adf4c2f959a3169d6063d50d311498dd7d604c2ba953d.json  query-37a3ce35d33e592868ea2cf6010068b42c0a442c3f92a42cc1166225d2ba6a99.json  query-3b318656a561becb9c723ae2a853288866c61c2ff3f3d24840449a3bfb1c991c.json  query-40fe8b008f2567ee95c09c4d31ca37abc864b14bcf1728fc3b347964f24c46ab.json  query-44e991ca1c551aa8bb04ab7149f1c1c846332247fc67aeb5d16ad8d0797903e2.json  query-47b2a3b00041b5b3cd615849cfc4227fc8720faa72466fb4267c7554879e0473.json  query-47c385832784436058030af98f4dfdba93aa98fc5428a34b62448bdd024b7603.json  (+89 more)
backend/migrations/: 20251107082844_add_qs_client_record_activity_time_index.down.sql  20251107082844_add_qs_client_record_activity_time_index.up.sql  20251208165256_invitation_code.down.sql  20251208165256_invitation_code.up.sql  20260331162400_invite-generation.down.sql  20260331162400_invite-generation.up.sql  20260406120000_create_as_token_nonce.down.sql  20260406120000_create_as_token_nonce.up.sql  20260406130000_key_rotation_epoch.down.sql  20260406130000_key_rotation_epoch.up.sql  20260409160950_privacypass_invitation_codes.down.sql  20260409160950_privacypass_invitation_codes.up.sql  20260409160950_privacypass_tokens_operations.down.sql  20260409160950_privacypass_tokens_operations.up.sql  20260414093504_invitation_code_created_at.down.sql  20260414093504_invitation_code_created_at.up.sql  20260430095552_apq.down.sql  20260430095552_apq.up.sql  20260528131945_soft_delete_qs_clients.down.sql  20260528131945_soft_delete_qs_clients.up.sql  20260603000000_ds_collision_tag.down.sql  20260603000000_ds_collision_tag.up.sql  20260609094320_qs_staged_key_package.down.sql  20260609094320_qs_staged_key_package.up.sql
backend/src/: air_service.rs  lib.rs  pg_listen.rs  settings.rs  util.rs  version.rs
common/: Cargo.toml
common/benches/: argon_pow.rs
common/src/: component.rs  lib.rs  mls_group_config.rs  padme.rs  utils.rs  virtual_client.rs
coreclient/: .env  Cargo.toml  sqlx.toml
coreclient/.sqlx/: query-0036a79433772cd88c583e759807e6f7a30d800df46f116b49769e44eaa82451.json  query-00f053f3c6cbe5ae51f46bd81411db461340ea34769c1b4f1b079b1b374072f2.json  query-01ec4843b518c127a8336a41f74605a2e0ea83e1e7bcf0fd204c24db52e8496f.json  query-0219c8df4b27de143a1daa25e875f0736ed61bf5e45098affd855859418a652e.json  query-02aee87aa43d81930d086ca59f1f9ceb580e7c7b5e2d00e59a2e4e45dbf7b189.json  (+390 more)
coreclient/migrations/: 20251013081643_receipt_queue.sql  (+50 more)
macros/: Cargo.toml
mls-assist/: Cargo.toml
protos/: Cargo.toml  buf.yaml  build.rs
server/: Cargo.toml  Dockerfile
test_harness/: Cargo.toml
xtask/: Cargo.toml
(+860 files in other folders)
