# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"

members = [
    "apiclient",
    "applogic",
    "backend",
    "common",
    "coreclient",
    "mls-assist",
    "protos",
    "server",
    "test_harness",
]

[workspace.dependencies]
airapiclient = { path = "apiclient" }
airbackend = { path = "backend" }
aircommon = { path = "common" }
aircoreclient = { path = "coreclient" }
airprotos = { path = "protos" }
airserver = { path = "server" }
airserver_test_harness = { path = "test_harness" }
mls-assist = { path = "mls-assist" }

aes-gcm = "0.10"
anyhow = { version = "1.0.98", features = ["backtrace"] }
argon2 = "0.5.3"
async-trait = "0.1.53"
aws-config = { version = "1.8.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-s3 = { version = "1.92.0", default-features = false, features = ["behavior-version-latest", "http-1x"] }
aws-sigv4 = { version = "1.3.6", default-features = false, features = ["sigv4a"] }
axum = { version = "0.8.6", features = ["http2"] }
base64 = "0.22.1"
blake3 = "1.8.2"
blurhash = "0.2.3"
bytes = "1.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2"
config = "0.15"
criterion = { version = "0.6.0", features = ["html_reports", "async", "async_tokio"] }
dashmap = "6.1.0"
derive_more = { version = "0.99.19", features = ["from"] }
displaydoc = "0.2.5"
ed25519 = "2.2"
enumset = "1.1.5"
flate2 = "1.1.0"
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono", "uuid"] }
futures-util = "0.3.31"
hex = "0.4.3"
hkdf = "0.12"
image = "0.25.1"
infer = "0.19.0"
insta = { version = "1.42.1", features = ["json"] }
jni = "0.21"
jsonwebtoken = "9"
kamadak-exif = "0.6.1"
lru = "0.16.2"
memmap2 = "0.9.5"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
mimi-room-policy = { git = "https://github.com/phnx-im/mimi-room-policy", rev = "6406e6d84c1219da3afcccb91007f2fdaaf61193" }
mimi_content = { git = "https://github.com/boxdot/mimi-content", rev = "18af569b6074ed5b63cb2d5086ffea3acfad3f02" }
mockall = "0.13.1"
openmls = { version = "0.7.1" }
openmls_rust_crypto = { version = "0.4.1" }
openmls_traits = { version = "0.4.1" }
parking_lot = "0.12"
pin-project = "1.1.10"
png = "0.17"
privacypass = { git = "https://github.com/raphaelrobert/privacypass" }
prost = "0.14.0"
protoc-bin-vendored = "3.1.0"
pulldown-cmark = "0.13.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8"
rand_chacha = "0.3.1"
regex = "1.11.1"
reqwest = { version = "^0.12", features = ["json", "rustls-tls-webpki-roots", "brotli", "http2", "charset"], default-features = false }
secrecy = "0.10"
serde = { version = "1.0.147", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.5", default-features = false, features = ["macros", "uuid", "chrono", "migrate", "bigdecimal", "runtime-tokio"] }
tar = "0.4.44"
tempfile = "3.23.0"
thiserror = "2.0"
tls_codec = { version = "0.4.1", features = ["derive", "serde", "mls"] }
tokio = { version = "1.18.2", features = ["macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
tonic = { version = "0.14.0", features = ["tls-ring", "tls-webpki-roots"] }
tonic-health = "0.14.0"
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["trace"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3"
tracing-futures = "0.2.5"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log", "parking_lot"] }
trait-variant = "0.1.2"
url = "2.5.4"
uuid = "1.16.0"
webp = "0.3.0"
zeroize = "1.8.1"

[patch.crates-io]
# PR: <https://github.com/RustCrypto/formats/pull/1656/files>
tls_codec = { git = "https://github.com/boxdot/formats", rev = "9846c69f91e732b493dcccf92f4c163bfc711b7d" }
tls_codec_derive = { git = "https://github.com/boxdot/formats", rev = "9846c69f91e732b493dcccf92f4c163bfc711b7d" }

[profile.release]
strip = true
lto = true
codegen-units = 1
