# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"

members = [
    "apiclient",
    "applogic",
    "backend",
    "common",
    "coreclient",
    "macros",
    "mls-assist",
    "protos",
    "server",
    "test_harness",
    "xtask",
]

[workspace.dependencies]
airapiclient = { path = "apiclient" }
airbackend = { path = "backend" }
aircommon = { path = "common" }
aircoreclient = { path = "coreclient" }
airmacros = { path = "macros" }
airprotos = { path = "protos" }
airserver = { path = "server" }
airserver_test_harness = { path = "test_harness" }
mls-assist = { path = "mls-assist" }

aes-gcm = "0.10"
anyhow = { version = "1.0.98", features = ["backtrace"] }
apqmls = { git = "https://github.com/phnx-im/apqmls", rev = "e0dcefa4527a5e80683f830f7f50659153f9afd0" }
arboard = "3"
argon2 = "0.5.3"
async-trait = "0.1.53"
aws-config = { version = "1.8.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-s3 = { version = "1.119.0", default-features = false, features = ["behavior-version-latest", "http-1x"] }
aws-sigv4 = { version = "1.3.6", default-features = false }
axum = { version = "0.8.6", features = ["http2"] }
base64 = "0.22.1"
blake3 = "1.8.2"
blurhash = "0.2.3"
bytes = "1.11.1"
camino = "1.1"
cargo_metadata = "0.23"
cbor-diag = "0.1.12"
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
criterion = { version = "0.6.0", features = ["html_reports", "async", "async_tokio"] }
dashmap = "6.1.0"
derive_more = { version = "0.99.19", features = ["from"] }
deunicode = "1.6.2"
displaydoc = "0.2.5"
ed25519 = "2.2"
enumset = "1.1.5"
flate2 = "1.1.0"
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono", "uuid"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
h2 = "0.4.12"
hex = "0.4.3"
hkdf = "0.12"
ignore = "0.4"
image = "0.25.1"
infer = "0.19.0"
insta = { version = "1.42.1", features = ["json"] }
jni = "0.21"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lru = "0.16.2"
memmap2 = "0.9.5"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
mimi-room-policy = { git = "https://github.com/phnx-im/mimi-room-policy", rev = "6406e6d84c1219da3afcccb91007f2fdaaf61193" }
mimi_content = { git = "https://github.com/phnx-im/mimi-content", rev = "9189ef0b350576e6edd130e43d281c8eb9bfe452" }
mockall = "0.13.1"
mockito = "1.7.0"
openmls = { version = "0.8.1", features = ["extensions-draft-08", "draft-ietf-mls-pq-ciphersuites"] }
openmls_memory_storage = { version = "0.5.0", features = ["extensions-draft-08", "draft-ietf-mls-pq-ciphersuites"] }
openmls_rust_crypto = { version = "0.5.1", features = ["draft-ietf-mls-pq-ciphersuites"] }
openmls_traits = { version = "0.5.0", features = ["draft-ietf-mls-pq-ciphersuites"] }
parking_lot = "0.12"
pin-project = "1.1.10"
png = "0.17"
privacypass = { git = "https://github.com/raphaelrobert/privacypass", rev = "48296d412e9d6e4b9b3a6a9f747e39bce253fcfb" }
prost = "0.14.0"
protoc-bin-vendored = "3.1.0"
pulldown-cmark = "0.13.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8"
rand_chacha = "0.3.1"
regex = "1.11.1"
reqwest = { version = "^0.12", features = ["json", "rustls-tls-webpki-roots", "brotli", "http2", "charset"], default-features = false }
secrecy = "0.10"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
sha2 = "0.10.9"
shadow-rs = { version = "1.4.0", default-features = false }
sqlx = { version = "0.8.5", default-features = false, features = ["macros", "uuid", "chrono", "migrate", "bigdecimal", "runtime-tokio"] }
strum = { version = "0.28", features = ["derive"] }
tar = "0.4.44"
tempfile = "3.23.0"
thiserror = "2.0"
tls_codec = { version = "0.4.1", features = ["derive", "serde", "mls"] }
tokio = { version = "1.18.2", features = ["macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
tonic = { version = "0.14.0", features = ["tls-ring", "tls-webpki-roots"] }
tonic-health = "0.14.0"
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["trace"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log", "parking_lot"] }
trait-variant = "0.1.2"
url = "2.5.4"
uuid = "1.16.0"
webp = "0.3.0"
xshell = "0.2"
zeroize = "1.8.1"


[patch.crates-io]
# Use the several commits after the 0.8.1 release exposing methods as public APIs, in particular:
# <https://github.com/openmls/openmls/commit/04c50d7fb12d52f4f9aee26de5f5234f3df29fa8>
# <https://github.com/openmls/openmls/commit/b73621ba14ead6b32636a4e910f2cbfabb0d1ee9>
#
# Also, use the post-quantum-support branch of openmls.
openmls = { git = "https://github.com/boxdot/openmls", branch = "dima/post-quantum-support" }
openmls_rust_crypto = { git = "https://github.com/boxdot/openmls", branch = "dima/post-quantum-support" }
openmls_traits = { git = "https://github.com/boxdot/openmls", branch = "dima/post-quantum-support" }
openmls_memory_storage = { git = "https://github.com/boxdot/openmls", branch = "dima/post-quantum-support" }
openmls_basic_credential = { git = "https://github.com/boxdot/openmls", branch = "dima/post-quantum-support" }
# openmls = { path = "../openmls/openmls" }
# openmls_rust_crypto = { path = "../openmls/openmls_rust_crypto" }
# openmls_traits = { path = "../openmls/traits" }
# openmls_memory_storage = { path = "../openmls/memory_storage" }
# openmls_sqlite_storage = { path = "../openmls/sqlite_storage" }

# feat: add p384 support
# <https://github.com/cryspen/hpke-rs/pull/150>
hpke-rs = { git = "https://github.com/boxdot/hpke-rs", branch = "dima/p384" }
hpke-rs-crypto = { git = "https://github.com/boxdot/hpke-rs", branch = "dima/p384" }
hpke-rs-rust-crypto = { git = "https://github.com/boxdot/hpke-rs", branch = "dima/p384" }
# hpke-rs = { path = "../hpke-rs" }
# hpke-rs-crypto = { path = "../hpke-rs/traits/" }
# hpke-rs-rust-crypto = { path = "../hpke-rs/rust_crypto_provider/" }

[patch."https://github.com/phnx-im/apqmls"]
# apqmls = { path = "../hpqmls" }


[profile.release]
strip = true
lto = true
codegen-units = 1
