# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airapiclient"
version = "0.2.0"
edition = "2024"
publish = false
description = "HTTP and GRPC client for the server API"
license = "AGPL-3.0-or-later"

[dependencies]
aircommon.workspace = true
airprotos.workspace = true
futures-util.workspace = true
mimi-room-policy.workspace = true
mls-assist.workspace = true
pin-project.workspace = true
thiserror.workspace = true
tls_codec.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
