# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airapplogic"
version = "0.2.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2024"
publish = false
description = "Multi-platform client application logic"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

# Silence warnings caused by the `frb` macro (since Rust 1.84.0).
#
# <https://github.com/fzyzcjy/flutter_rust_bridge/issues/2425>
# <https://github.com/fzyzcjy/flutter_rust_bridge/issues/2493>
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
aircommon.workspace = true
aircoreclient.workspace = true
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono.workspace = true
derive_more.workspace = true
flate2.workspace = true
flutter_rust_bridge.workspace = true
jni.workspace = true
lru.workspace = true
memmap2.workspace = true
mimi-room-policy.workspace = true
mimi_content.workspace = true
parking_lot.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
tls_codec.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
libc = "0.2" # required for stack size in background execution on Android/iOS

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
notify-rust = "4"

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
tempfile.workspace = true
openmls.workspace = true           # Required for GroupId
mockall.workspace = true
