# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airbackend"
version = "0.2.0"
authors = ["Phoenix R&D <hello@phnx.im>"]
edition = "2024"
include = ["./migrations/**"]
publish = false
description = "Implements the local and the federation part of the protocol logic on the server side"
license = "AGPL-3.0-or-later"

[dependencies]
aircommon.workspace = true
airprotos.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
aws-config.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
chrono.workspace = true
displaydoc.workspace = true
futures-util.workspace = true
mimi-room-policy.workspace = true
mls-assist.workspace = true
privacypass.workspace = true
prost.workspace = true
rand.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["postgres", "tls-rustls"] }
tls_codec.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true

[dev-dependencies]
aircommon = { workspace = true, features = ["test_utils"] }
anyhow.workspace = true
insta.workspace = true
serde_json.workspace = true
mockall.workspace = true
tracing-subscriber.workspace = true

[features]
test_utils = ["aircommon/test_utils"]
