# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airbackend"
version = "0.5.0"
authors = ["Phoenix R&D <hello@phnx.im>"]
edition = "2024"
include = ["./migrations/**"]
publish = false
description = "Implements the local and the federation part of the protocol logic on the server side"
license = "AGPL-3.0-or-later"

[dependencies]
aircommon.workspace = true
airprotos.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sigv4.workspace = true
base64.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
dashmap.workspace = true
displaydoc.workspace = true
futures-util.workspace = true
h2.workspace = true
metrics.workspace = true
mimi-room-policy.workspace = true
mls-assist.workspace = true
privacypass.workspace = true
prost.workspace = true
rand.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["postgres", "tls-rustls"] }
thiserror.workspace = true
tls_codec.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
zeroize.workspace = true

[dev-dependencies]
aircommon = { workspace = true, features = ["test_utils"] }
anyhow.workspace = true
insta.workspace = true
mockall.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true

[features]
test_utils = ["aircommon/test_utils"]
