# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aircommon"
version = "0.5.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2024"
publish = false
description = "Common code used in the server and client"
license = "AGPL-3.0-or-later"

[dependencies]
aes-gcm.workspace = true
argon2 = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["serde"] }
ciborium.workspace = true
displaydoc.workspace = true
ed25519 = { workspace = true, features = ["serde"] }
hex.workspace = true
hkdf.workspace = true
mimi-room-policy.workspace = true
mimi_content.workspace = true
mls-assist.workspace = true
rand.workspace = true
rand_chacha.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["sqlite", "postgres"] }
thiserror.workspace = true
tls_codec.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[features]
test_utils = []

[[bench]]
name = "argon_pow"
path = "benches/argon_pow.rs"
harness = false
