# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aircoreclient"
version = "0.6.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2024"
publish = false
description = "Implements the protocol logic of the client component"
license = "AGPL-3.0-or-later"

[lib]

[dependencies]
airapiclient.workspace = true
aircommon.workspace = true
airprotos.workspace = true
anyhow.workspace = true
base64.workspace = true
blurhash.workspace = true
chrono.workspace = true
derive_more.workspace = true
enumset.workspace = true
flate2.workspace = true
image.workspace = true
infer.workspace = true
kamadak-exif.workspace = true
mimi-room-policy.workspace = true
mimi_content.workspace = true
mls-assist.workspace = true
openmls.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
pin-project.workspace = true
rand.workspace = true                                              # TODO: Replace this with a CSPRNG
rand_chacha.workspace = true
reqwest = { workspace = true, features = ["stream", "multipart"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["chrono", "sqlite"] }
tar.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tls_codec.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tracing.workspace = true
trait-variant.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
webp.workspace = true

[dev-dependencies]
airbackend.workspace = true
aircommon = { workspace = true, features = ["test_utils"] }
airserver_test_harness.workspace = true
insta = { workspace = true, features = ["json"] }
tempfile.workspace = true
tracing-subscriber.workspace = true

[features]
test_utils = ["tempfile"]

[package.metadata.cargo-machete]
ignored = [
    "kamadak-exif", # false positive due to a different crate name: exif
]
