# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "mls-assist"
version = "0.6.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
chrono.workspace = true
openmls.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
