# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airprotos"
version = "0.2.0"
edition = "2024"
publish = false
description = "Protobuf and gRPC definitions of the APIs"
license = "AGPL-3.0-or-later"

[dependencies]
aircommon.workspace = true

chrono.workspace = true
derive_more.workspace = true
displaydoc.workspace = true
mimi-room-policy.workspace = true
mls-assist.workspace = true
openmls.workspace = true
prost.workspace = true
thiserror.workspace = true
tls_codec.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "prost",       # neeeded for generated tonic code
    "tonic-prost", # needed for generated tonic code
]
