# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airprotos"
version = "0.13.0"
edition = "2024"
publish = false
description = "Protobuf and gRPC definitions of the APIs"
license = "AGPL-3.0-or-later"

[dependencies]
aircommon.workspace = true
airmacros.workspace = true
chrono.workspace = true
derive_more.workspace = true
displaydoc.workspace = true
mimi-room-policy.workspace = true
mimi_content.workspace = true
mls-assist.workspace = true
openmls.workspace = true
prost.workspace = true
semver.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
thiserror.workspace = true
tls_codec.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
uuid.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
cbor-diag = "0.1.12"
insta.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "tonic-prost", # needed for generated tonic code
    "serde_bytes", # used in SerializeTaggedMap/DeserializeTaggedMap generated code
]
