# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airserver"
version = "0.2.0"
edition = "2024"
publish = false
description = "Server that makes the logic implemented in the backend available to clients via a REST API"
license = "AGPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "airserver"

[features]
api_docs = []

[[bench]]
name = "bench"
harness = false

[dependencies]
airbackend.workspace = true
aircommon.workspace = true
airprotos.workspace = true
anyhow.workspace = true
axum.workspace = true
config.workspace = true
jsonwebtoken.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
pin-project.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tls_codec.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[dev-dependencies]
tracing-futures.workspace = true
airapiclient.workspace = true
aircoreclient.workspace = true
once_cell.workspace = true
airserver_test_harness.workspace = true
image.workspace = true
png.workspace = true
mimi_content.workspace = true
criterion.workspace = true
rand.workspace = true
uuid.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
