# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airserver_test_harness"
version = "0.5.0"
edition = "2024"
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
airbackend = { workspace = true, features = ["test_utils"] }
aircommon.workspace = true
aircoreclient = { workspace = true, features = ["test_utils"] }
airserver.workspace = true
anyhow.workspace = true
mimi_content.workspace = true
rand.workspace = true
rand_chacha.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["process"] }
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }
